<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="save">Simpan</string>
    <string name="hasil">Hasil</string>
    <string name="gagal">Image classifier failed to initialize. See error logs for details</string>
    <string name="gagal_ambil_foto">Gagal Mengambil Foto</string>
    <string name="news">Berita\n</string>
    <string name="asclepius">Asclepius</string>
    <string name="riwayat">RIWAYAT</string>
    <string name="berita">BERITA</string>
    <string name="delete">Delete</string>
</resources>